  existential witnesses. Each witness can also be of the form `<id> = <term>`
  which selects a particular existential variable to instantiate. Without
  the `<id> = ` part it always instantiates the first variables.
* The `induction` tactic can now traverse an arbitrary sequence of `forall`,
  `nabla`, and `->` connectives when finding the induction argument.

Experimental changes (may be changed or removed in the future)

* Added support for (first-order) polymorphic definitions. Definitions
  such as the following are now accepted.

        Define fresh : A -> B -> prop by
          nabla x, fresh x M.

  In every use of the definition, the type arguments are implicitly
  instantiated. The type-checking *for* such definitions is identical to
  taking all the unbound variable names and quantifying them on the outside.
  In other words, for the above definition, the behavior of type-checking is
  the same as if there were:

        Kind A,B  type
        Define fresh : A -> B -> prop by
          nabla x, fresh x M.

  Once such a definition is type-checked, the defined symbols are added to
  the signature as new polymorphic constants, in a vein similar to the `pi`
  constant. Whenever it is used, the type arguments are implicitly
  instantiated based on the types of the arguments.

* Added support for (first-order) polymorphic theorems. A theorem such as
  the following is now accepted.

        Theorem prune_arg[A] : forall E L, nabla (x:A), member (E x) L ->
           exists F, E = x\ F.

  The `A` here is a type parameter, which must be distinct from the other
  basic types in scope. To use such a theorem, you *must* supply enough
  arguments. An example:

        Theorem bar : forall E G, nabla (x:tm) (y:ty),
           member (E x y) G -> exists F, E = x\ y\ F.
        intros.
        apply prune_arg[tm] to H1.
        apply prune_arg[ty] to H1.
        search.

* Added limited support for predicate instantiation during import. The form
